_config.yml: updated logo_img_alt in header

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ header:
   title: Fjord
   tagline: Minimal and clean blog theme
   logo_img: images/logo.svg
-  logo_img_alt: Fjord Logo
+  logo_img_alt: uzair
   background_img: images/header-bg.jpg
   has_nav: true
   nav_links:
