_config.yml: updated tagline in header

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ collections:
 palette: yellow
 header:
   title: Fjord
-  tagline: Minimal and clean blog theme
+  tagline: Welcome to my geeky blog...
   logo_img: images/logo.svg
   logo_img_alt: uzair
   background_img: images/header-bg.jpg
