_config.yml: updated logo_img_alt in header

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ header:
   title: Fjord
   tagline: Welcome to my geeky blog...
   logo_img: images/logo.svg
-  logo_img_alt: uzair
+  logo_img_alt: ''
   background_img: images/header-bg.jpg
   has_nav: true
   nav_links:
