_config.yml: updated title in header

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ collections:
     permalink: '/posts/:title/'
 palette: yellow
 header:
-  title: Fjord
+  title: uzair.
   tagline: Welcome to my geeky blog...
   logo_img: images/logo.svg
   logo_img_alt: ''
