--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ collections:
 palette: yellow
 header:
   title: uzair.
-  tagline: Welcome to my geeky blog...
+  tagline: ''
   logo_img: images/logo.svg
   logo_img_alt: ''
   background_img: images/header-bg.jpg
